feat: projects.njk template

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
 					<h2>WELCOME TO ROCHESTER, MN <br> Today's HAM radio conditions:<br> FAVORABLE</h2>
 							
 
-					<div id="map" style="min-height: 400px;">
+					<div id="map" style="min-height: 800px; max-width: 1500px;">
 						<script>
 							var map = L.map('map').setView([44.02, -92.45], 11);
 						  
